# flutter_jscore

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: example.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_jscore.podspec
ios/Classes/: FlutterJscorePlugin.h  FlutterJscorePlugin.m  SwiftFlutterJscorePlugin.swift
lib/: flutter_jscore.dart  jscore_bindings.dart
lib/binding/: js_base.dart  js_object_ref.dart  js_string_ref.dart  js_typed_array.dart  js_value_ref.dart  jsc_ffi.dart
lib/jscore/: js_class.dart  js_context.dart  js_context_group.dart  js_object.dart  js_property_name_accumulator.dart  js_property_name_array.dart  js_value.dart
linux/: CMakeLists.txt  flutter_jscore_plugin.cc
macos/: flutter_jscore.podspec
macos/Classes/: FlutterJscorePlugin.swift
test/: flutter_jscore_test.dart
windows/: CMakeLists.txt  flutter_jscore_plugin.cpp
windows/JSC/bin32/: JavaScriptCore.exp  JavaScriptCore.lib  WTF.exp  WTF.lib
windows/JSC/bin64/: JavaScriptCore.exp  JavaScriptCore.lib  WTF.exp  WTF.lib
windows/JSC/include/: JSBase.h  JSContextRef.h  JSObjectRef.h  JSValueRef.h
windows/include/flutter_jscore/: flutter_jscore_plugin.h
(+22 files in other folders)
